@@ -26,7 +26,9 @@ namespace TEN::Effects::Spark
 	extern std::array<SparkParticle, 128> SparkParticles;
 			
 	void UpdateSparkParticles();
+	void DisableSparkParticles();
 	SparkParticle& GetFreeSparkParticle();
+
 	void TriggerFlareSparkParticles(const Vector3i& pos, const Vector3i& vel, const ColorData& color, int roomNumber);
 	void TriggerRicochetSpark(const GameVector& pos, short angle, int num, const Vector4& colorStart = SPARK_RICOCHET_COLOR_DEFAULT);
 	void TriggerFrictionSpark(const GameVector& pos, const EulerAngles& angle, float length, int count);
